--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ body {
 .navbar .menu-toggle {
   display: none; /* Hide by default */
   font-size: 24px;
+  color: #FFFFFF;
   cursor: pointer;
 }
 
